--- a/examples/02_mnist_kattis.ipynb
+++ b/examples/02_mnist_kattis.ipynb
@@ -20,7 +20,6 @@
     "import pandas as pd\n",
     "import os\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "os.chdir('../src')\n",
     "from trainer import Trainer\n",
@@ -117,117 +116,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration   [0] ---- Best fitness: 0.7711 ---- Average fitness: 0.5596\n",
-      "Iteration   [1] ---- Best fitness: 0.7808 ---- Average fitness: 0.6121\n",
-      "Iteration   [2] ---- Best fitness: 0.8101 ---- Average fitness: 0.6529\n",
-      "Iteration   [3] ---- Best fitness: 0.8765 ---- Average fitness: 0.6996\n",
-      "Iteration   [4] ---- Best fitness: 0.8381 ---- Average fitness: 0.7261\n",
-      "Iteration   [5] ---- Best fitness: 0.8635 ---- Average fitness: 0.7534\n",
-      "Iteration   [6] ---- Best fitness: 0.8618 ---- Average fitness: 0.7822\n",
-      "Iteration   [7] ---- Best fitness: 0.9084 ---- Average fitness: 0.8033\n",
-      "Iteration   [8] ---- Best fitness: 0.9051 ---- Average fitness: 0.8194\n",
-      "Iteration   [9] ---- Best fitness: 0.9103 ---- Average fitness: 0.8363\n",
-      "Iteration   [10] ---- Best fitness: 0.9103 ---- Average fitness: 0.8538\n",
-      "Iteration   [11] ---- Best fitness: 0.9209 ---- Average fitness: 0.8643\n",
-      "Iteration   [12] ---- Best fitness: 0.9220 ---- Average fitness: 0.8738\n",
-      "Iteration   [13] ---- Best fitness: 0.9249 ---- Average fitness: 0.8830\n",
-      "Iteration   [14] ---- Best fitness: 0.9272 ---- Average fitness: 0.8942\n",
-      "Iteration   [15] ---- Best fitness: 0.9276 ---- Average fitness: 0.9021\n",
-      "Iteration   [16] ---- Best fitness: 0.9293 ---- Average fitness: 0.9067\n",
-      "Iteration   [17] ---- Best fitness: 0.9272 ---- Average fitness: 0.9120\n",
-      "Iteration   [18] ---- Best fitness: 0.9284 ---- Average fitness: 0.9161\n",
-      "Iteration   [19] ---- Best fitness: 0.9284 ---- Average fitness: 0.9198\n",
-      "Iteration   [20] ---- Best fitness: 0.9303 ---- Average fitness: 0.9228\n",
-      "Iteration   [21] ---- Best fitness: 0.9312 ---- Average fitness: 0.9248\n",
-      "Iteration   [22] ---- Best fitness: 0.9306 ---- Average fitness: 0.9257\n",
-      "Iteration   [23] ---- Best fitness: 0.9310 ---- Average fitness: 0.9265\n",
-      "Iteration   [24] ---- Best fitness: 0.9324 ---- Average fitness: 0.9273\n",
-      "Iteration   [25] ---- Best fitness: 0.9324 ---- Average fitness: 0.9279\n",
-      "Iteration   [26] ---- Best fitness: 0.9333 ---- Average fitness: 0.9285\n",
-      "Iteration   [27] ---- Best fitness: 0.9336 ---- Average fitness: 0.9291\n",
-      "Iteration   [28] ---- Best fitness: 0.9344 ---- Average fitness: 0.9301\n",
-      "Iteration   [29] ---- Best fitness: 0.9349 ---- Average fitness: 0.9307\n",
-      "Iteration   [30] ---- Best fitness: 0.9349 ---- Average fitness: 0.9312\n",
-      "Iteration   [31] ---- Best fitness: 0.9361 ---- Average fitness: 0.9319\n",
-      "Iteration   [32] ---- Best fitness: 0.9362 ---- Average fitness: 0.9328\n",
-      "Iteration   [33] ---- Best fitness: 0.9394 ---- Average fitness: 0.9335\n",
-      "Iteration   [34] ---- Best fitness: 0.9394 ---- Average fitness: 0.9340\n",
-      "Iteration   [35] ---- Best fitness: 0.9393 ---- Average fitness: 0.9349\n",
-      "Iteration   [36] ---- Best fitness: 0.9390 ---- Average fitness: 0.9356\n",
-      "Iteration   [37] ---- Best fitness: 0.9400 ---- Average fitness: 0.9361\n",
-      "Iteration   [38] ---- Best fitness: 0.9400 ---- Average fitness: 0.9366\n",
-      "Iteration   [39] ---- Best fitness: 0.9413 ---- Average fitness: 0.9373\n",
-      "Iteration   [40] ---- Best fitness: 0.9413 ---- Average fitness: 0.9378\n",
-      "Iteration   [41] ---- Best fitness: 0.9418 ---- Average fitness: 0.9382\n",
-      "Iteration   [42] ---- Best fitness: 0.9418 ---- Average fitness: 0.9388\n",
-      "Iteration   [43] ---- Best fitness: 0.9423 ---- Average fitness: 0.9392\n",
-      "Iteration   [44] ---- Best fitness: 0.9423 ---- Average fitness: 0.9396\n",
-      "Iteration   [45] ---- Best fitness: 0.9428 ---- Average fitness: 0.9400\n",
-      "Iteration   [46] ---- Best fitness: 0.9428 ---- Average fitness: 0.9404\n",
-      "Iteration   [47] ---- Best fitness: 0.9433 ---- Average fitness: 0.9406\n",
-      "Iteration   [48] ---- Best fitness: 0.9439 ---- Average fitness: 0.9409\n",
-      "Iteration   [49] ---- Best fitness: 0.9436 ---- Average fitness: 0.9413\n",
-      "Iteration   [50] ---- Best fitness: 0.9437 ---- Average fitness: 0.9417\n",
-      "Iteration   [51] ---- Best fitness: 0.9444 ---- Average fitness: 0.9421\n",
-      "Iteration   [52] ---- Best fitness: 0.9440 ---- Average fitness: 0.9424\n",
-      "Iteration   [53] ---- Best fitness: 0.9448 ---- Average fitness: 0.9426\n",
-      "Iteration   [54] ---- Best fitness: 0.9443 ---- Average fitness: 0.9428\n",
-      "Iteration   [55] ---- Best fitness: 0.9445 ---- Average fitness: 0.9431\n",
-      "Iteration   [56] ---- Best fitness: 0.9448 ---- Average fitness: 0.9431\n",
-      "Iteration   [57] ---- Best fitness: 0.9448 ---- Average fitness: 0.9434\n",
-      "Iteration   [58] ---- Best fitness: 0.9449 ---- Average fitness: 0.9434\n",
-      "Iteration   [59] ---- Best fitness: 0.9450 ---- Average fitness: 0.9437\n",
-      "Iteration   [60] ---- Best fitness: 0.9450 ---- Average fitness: 0.9440\n",
-      "Iteration   [61] ---- Best fitness: 0.9449 ---- Average fitness: 0.9441\n",
-      "Iteration   [62] ---- Best fitness: 0.9449 ---- Average fitness: 0.9442\n",
-      "Iteration   [63] ---- Best fitness: 0.9452 ---- Average fitness: 0.9443\n",
-      "Iteration   [64] ---- Best fitness: 0.9457 ---- Average fitness: 0.9443\n",
-      "Iteration   [65] ---- Best fitness: 0.9458 ---- Average fitness: 0.9443\n",
-      "Iteration   [66] ---- Best fitness: 0.9461 ---- Average fitness: 0.9445\n",
-      "Iteration   [67] ---- Best fitness: 0.9462 ---- Average fitness: 0.9446\n",
-      "Iteration   [68] ---- Best fitness: 0.9466 ---- Average fitness: 0.9447\n",
-      "Iteration   [69] ---- Best fitness: 0.9467 ---- Average fitness: 0.9451\n",
-      "Iteration   [70] ---- Best fitness: 0.9466 ---- Average fitness: 0.9452\n",
-      "Iteration   [71] ---- Best fitness: 0.9483 ---- Average fitness: 0.9454\n",
-      "Iteration   [72] ---- Best fitness: 0.9483 ---- Average fitness: 0.9455\n",
-      "Iteration   [73] ---- Best fitness: 0.9483 ---- Average fitness: 0.9459\n",
-      "Iteration   [74] ---- Best fitness: 0.9483 ---- Average fitness: 0.9461\n",
-      "Iteration   [75] ---- Best fitness: 0.9483 ---- Average fitness: 0.9464\n",
-      "Iteration   [76] ---- Best fitness: 0.9487 ---- Average fitness: 0.9466\n",
-      "Iteration   [77] ---- Best fitness: 0.9487 ---- Average fitness: 0.9468\n",
-      "Iteration   [78] ---- Best fitness: 0.9493 ---- Average fitness: 0.9470\n",
-      "Iteration   [79] ---- Best fitness: 0.9493 ---- Average fitness: 0.9473\n",
-      "Iteration   [80] ---- Best fitness: 0.9498 ---- Average fitness: 0.9477\n",
-      "Iteration   [81] ---- Best fitness: 0.9499 ---- Average fitness: 0.9480\n",
-      "Iteration   [82] ---- Best fitness: 0.9510 ---- Average fitness: 0.9484\n",
-      "Iteration   [83] ---- Best fitness: 0.9515 ---- Average fitness: 0.9488\n",
-      "Iteration   [84] ---- Best fitness: 0.9515 ---- Average fitness: 0.9491\n",
-      "Iteration   [85] ---- Best fitness: 0.9515 ---- Average fitness: 0.9493\n",
-      "Iteration   [86] ---- Best fitness: 0.9515 ---- Average fitness: 0.9495\n",
-      "Iteration   [87] ---- Best fitness: 0.9515 ---- Average fitness: 0.9497\n",
-      "Iteration   [88] ---- Best fitness: 0.9521 ---- Average fitness: 0.9499\n",
-      "Iteration   [89] ---- Best fitness: 0.9521 ---- Average fitness: 0.9501\n",
-      "Iteration   [90] ---- Best fitness: 0.9521 ---- Average fitness: 0.9505\n",
-      "Iteration   [91] ---- Best fitness: 0.9521 ---- Average fitness: 0.9507\n",
-      "Iteration   [92] ---- Best fitness: 0.9521 ---- Average fitness: 0.9508\n",
-      "Iteration   [93] ---- Best fitness: 0.9521 ---- Average fitness: 0.9511\n",
-      "Iteration   [94] ---- Best fitness: 0.9521 ---- Average fitness: 0.9512\n",
-      "Iteration   [95] ---- Best fitness: 0.9521 ---- Average fitness: 0.9513\n",
-      "Iteration   [96] ---- Best fitness: 0.9521 ---- Average fitness: 0.9514\n",
-      "Iteration   [97] ---- Best fitness: 0.9522 ---- Average fitness: 0.9514\n",
-      "Iteration   [98] ---- Best fitness: 0.9524 ---- Average fitness: 0.9516\n",
-      "Iteration   [99] ---- Best fitness: 0.9524 ---- Average fitness: 0.9515\n",
+      "Iteration [0] ---- 2.58s ---- Best fitness: 0.7711 ---- Average fitness: 0.5596\n",
+      "Iteration [1] ---- 5.15s ---- Best fitness: 0.7808 ---- Average fitness: 0.6121\n",
+      "Iteration [2] ---- 5.39s ---- Best fitness: 0.8101 ---- Average fitness: 0.6529\n",
+      "Iteration [3] ---- 4.97s ---- Best fitness: 0.8765 ---- Average fitness: 0.6996\n",
+      "Iteration [4] ---- 4.97s ---- Best fitness: 0.8381 ---- Average fitness: 0.7261\n",
+      "Iteration [5] ---- 4.98s ---- Best fitness: 0.8635 ---- Average fitness: 0.7534\n",
+      "Iteration [6] ---- 4.99s ---- Best fitness: 0.8618 ---- Average fitness: 0.7822\n",
+      "Iteration [7] ---- 5.00s ---- Best fitness: 0.9084 ---- Average fitness: 0.8033\n",
+      "Iteration [8] ---- 5.02s ---- Best fitness: 0.9051 ---- Average fitness: 0.8194\n",
+      "Iteration [9] ---- 5.07s ---- Best fitness: 0.9103 ---- Average fitness: 0.8363\n",
+      "Iteration [10] ---- 5.13s ---- Best fitness: 0.9103 ---- Average fitness: 0.8538\n",
+      "Iteration [11] ---- 5.17s ---- Best fitness: 0.9209 ---- Average fitness: 0.8643\n",
+      "Iteration [12] ---- 5.03s ---- Best fitness: 0.9220 ---- Average fitness: 0.8738\n",
+      "Iteration [13] ---- 3.81s ---- Best fitness: 0.9249 ---- Average fitness: 0.8830\n",
+      "Iteration [14] ---- 2.61s ---- Best fitness: 0.9272 ---- Average fitness: 0.8942\n",
+      "Iteration [15] ---- 2.27s ---- Best fitness: 0.9276 ---- Average fitness: 0.9021\n",
+      "Iteration [16] ---- 2.29s ---- Best fitness: 0.9293 ---- Average fitness: 0.9067\n",
+      "Iteration [17] ---- 2.36s ---- Best fitness: 0.9272 ---- Average fitness: 0.9120\n",
+      "Iteration [18] ---- 2.22s ---- Best fitness: 0.9284 ---- Average fitness: 0.9161\n",
+      "Iteration [19] ---- 2.56s ---- Best fitness: 0.9284 ---- Average fitness: 0.9198\n",
+      "Iteration [20] ---- 4.83s ---- Best fitness: 0.9303 ---- Average fitness: 0.9228\n",
+      "Iteration [21] ---- 4.81s ---- Best fitness: 0.9312 ---- Average fitness: 0.9248\n",
+      "Iteration [22] ---- 4.77s ---- Best fitness: 0.9306 ---- Average fitness: 0.9257\n",
+      "Iteration [23] ---- 4.76s ---- Best fitness: 0.9310 ---- Average fitness: 0.9265\n",
+      "Iteration [24] ---- 4.85s ---- Best fitness: 0.9324 ---- Average fitness: 0.9273\n",
+      "Iteration [25] ---- 4.87s ---- Best fitness: 0.9324 ---- Average fitness: 0.9279\n",
+      "Iteration [26] ---- 4.76s ---- Best fitness: 0.9333 ---- Average fitness: 0.9285\n",
+      "Iteration [27] ---- 4.78s ---- Best fitness: 0.9336 ---- Average fitness: 0.9291\n",
+      "Iteration [28] ---- 4.87s ---- Best fitness: 0.9344 ---- Average fitness: 0.9301\n",
+      "Iteration [29] ---- 5.18s ---- Best fitness: 0.9349 ---- Average fitness: 0.9307\n",
+      "Iteration [30] ---- 4.87s ---- Best fitness: 0.9349 ---- Average fitness: 0.9312\n",
+      "Iteration [31] ---- 4.91s ---- Best fitness: 0.9361 ---- Average fitness: 0.9319\n",
+      "Iteration [32] ---- 4.87s ---- Best fitness: 0.9362 ---- Average fitness: 0.9328\n",
+      "Iteration [33] ---- 4.79s ---- Best fitness: 0.9394 ---- Average fitness: 0.9335\n",
+      "Iteration [34] ---- 4.85s ---- Best fitness: 0.9394 ---- Average fitness: 0.9340\n",
+      "Iteration [35] ---- 2.43s ---- Best fitness: 0.9393 ---- Average fitness: 0.9349\n",
+      "Iteration [36] ---- 2.40s ---- Best fitness: 0.9390 ---- Average fitness: 0.9356\n",
+      "Iteration [37] ---- 2.98s ---- Best fitness: 0.9400 ---- Average fitness: 0.9361\n",
+      "Iteration [38] ---- 5.00s ---- Best fitness: 0.9400 ---- Average fitness: 0.9366\n",
+      "Iteration [39] ---- 5.19s ---- Best fitness: 0.9413 ---- Average fitness: 0.9373\n",
+      "Iteration [40] ---- 4.96s ---- Best fitness: 0.9413 ---- Average fitness: 0.9378\n",
+      "Iteration [41] ---- 4.97s ---- Best fitness: 0.9418 ---- Average fitness: 0.9382\n",
+      "Iteration [42] ---- 5.12s ---- Best fitness: 0.9418 ---- Average fitness: 0.9388\n",
+      "Iteration [43] ---- 5.92s ---- Best fitness: 0.9423 ---- Average fitness: 0.9392\n",
+      "Iteration [44] ---- 5.32s ---- Best fitness: 0.9423 ---- Average fitness: 0.9396\n",
+      "Iteration [45] ---- 5.05s ---- Best fitness: 0.9428 ---- Average fitness: 0.9400\n",
+      "Iteration [46] ---- 5.05s ---- Best fitness: 0.9428 ---- Average fitness: 0.9404\n",
+      "Iteration [47] ---- 5.02s ---- Best fitness: 0.9433 ---- Average fitness: 0.9406\n",
+      "Iteration [48] ---- 2.86s ---- Best fitness: 0.9439 ---- Average fitness: 0.9409\n",
+      "Iteration [49] ---- 2.43s ---- Best fitness: 0.9436 ---- Average fitness: 0.9413\n",
+      "Iteration [50] ---- 2.42s ---- Best fitness: 0.9437 ---- Average fitness: 0.9417\n",
+      "Iteration [51] ---- 2.55s ---- Best fitness: 0.9444 ---- Average fitness: 0.9421\n",
+      "Iteration [52] ---- 2.89s ---- Best fitness: 0.9440 ---- Average fitness: 0.9424\n",
+      "Iteration [53] ---- 2.59s ---- Best fitness: 0.9448 ---- Average fitness: 0.9426\n",
+      "Iteration [54] ---- 2.58s ---- Best fitness: 0.9443 ---- Average fitness: 0.9428\n",
+      "Iteration [55] ---- 3.31s ---- Best fitness: 0.9445 ---- Average fitness: 0.9431\n",
+      "Iteration [56] ---- 3.33s ---- Best fitness: 0.9448 ---- Average fitness: 0.9431\n",
+      "Iteration [57] ---- 2.37s ---- Best fitness: 0.9448 ---- Average fitness: 0.9434\n",
+      "Iteration [58] ---- 2.87s ---- Best fitness: 0.9449 ---- Average fitness: 0.9434\n",
+      "Iteration [59] ---- 3.79s ---- Best fitness: 0.9450 ---- Average fitness: 0.9437\n",
+      "Iteration [60] ---- 3.35s ---- Best fitness: 0.9450 ---- Average fitness: 0.9440\n",
+      "Iteration [61] ---- 2.76s ---- Best fitness: 0.9449 ---- Average fitness: 0.9441\n",
+      "Iteration [62] ---- 2.43s ---- Best fitness: 0.9449 ---- Average fitness: 0.9442\n",
+      "Iteration [63] ---- 2.16s ---- Best fitness: 0.9452 ---- Average fitness: 0.9443\n",
+      "Iteration [64] ---- 3.02s ---- Best fitness: 0.9457 ---- Average fitness: 0.9443\n",
+      "Iteration [65] ---- 4.87s ---- Best fitness: 0.9458 ---- Average fitness: 0.9443\n",
+      "Iteration [66] ---- 5.00s ---- Best fitness: 0.9461 ---- Average fitness: 0.9445\n",
+      "Iteration [67] ---- 4.80s ---- Best fitness: 0.9462 ---- Average fitness: 0.9446\n",
+      "Iteration [68] ---- 4.83s ---- Best fitness: 0.9466 ---- Average fitness: 0.9447\n",
+      "Iteration [69] ---- 3.26s ---- Best fitness: 0.9467 ---- Average fitness: 0.9451\n",
+      "Iteration [70] ---- 2.71s ---- Best fitness: 0.9466 ---- Average fitness: 0.9452\n",
+      "Iteration [71] ---- 2.53s ---- Best fitness: 0.9483 ---- Average fitness: 0.9454\n",
+      "Iteration [72] ---- 2.63s ---- Best fitness: 0.9483 ---- Average fitness: 0.9455\n",
+      "Iteration [73] ---- 2.62s ---- Best fitness: 0.9483 ---- Average fitness: 0.9459\n",
+      "Iteration [74] ---- 2.51s ---- Best fitness: 0.9483 ---- Average fitness: 0.9461\n",
+      "Iteration [75] ---- 2.50s ---- Best fitness: 0.9483 ---- Average fitness: 0.9464\n",
+      "Iteration [76] ---- 2.58s ---- Best fitness: 0.9487 ---- Average fitness: 0.9466\n",
+      "Iteration [77] ---- 2.48s ---- Best fitness: 0.9487 ---- Average fitness: 0.9468\n",
+      "Iteration [78] ---- 2.67s ---- Best fitness: 0.9493 ---- Average fitness: 0.9470\n",
+      "Iteration [79] ---- 3.06s ---- Best fitness: 0.9493 ---- Average fitness: 0.9473\n",
+      "Iteration [80] ---- 1.89s ---- Best fitness: 0.9498 ---- Average fitness: 0.9477\n",
+      "Iteration [81] ---- 1.68s ---- Best fitness: 0.9499 ---- Average fitness: 0.9480\n",
+      "Iteration [82] ---- 1.74s ---- Best fitness: 0.9510 ---- Average fitness: 0.9484\n",
+      "Iteration [83] ---- 1.68s ---- Best fitness: 0.9515 ---- Average fitness: 0.9488\n",
+      "Iteration [84] ---- 1.69s ---- Best fitness: 0.9515 ---- Average fitness: 0.9491\n",
+      "Iteration [85] ---- 1.80s ---- Best fitness: 0.9515 ---- Average fitness: 0.9493\n",
+      "Iteration [86] ---- 1.92s ---- Best fitness: 0.9515 ---- Average fitness: 0.9495\n",
+      "Iteration [87] ---- 1.93s ---- Best fitness: 0.9515 ---- Average fitness: 0.9497\n",
+      "Iteration [88] ---- 1.87s ---- Best fitness: 0.9521 ---- Average fitness: 0.9499\n",
+      "Iteration [89] ---- 1.86s ---- Best fitness: 0.9521 ---- Average fitness: 0.9501\n",
+      "Iteration [90] ---- 2.01s ---- Best fitness: 0.9521 ---- Average fitness: 0.9505\n",
+      "Iteration [91] ---- 1.85s ---- Best fitness: 0.9521 ---- Average fitness: 0.9507\n",
+      "Iteration [92] ---- 1.82s ---- Best fitness: 0.9521 ---- Average fitness: 0.9508\n",
+      "Iteration [93] ---- 1.89s ---- Best fitness: 0.9521 ---- Average fitness: 0.9511\n",
+      "Iteration [94] ---- 1.91s ---- Best fitness: 0.9521 ---- Average fitness: 0.9512\n",
+      "Iteration [95] ---- 1.87s ---- Best fitness: 0.9521 ---- Average fitness: 0.9513\n",
+      "Iteration [96] ---- 1.85s ---- Best fitness: 0.9521 ---- Average fitness: 0.9514\n",
+      "Iteration [97] ---- 1.90s ---- Best fitness: 0.9522 ---- Average fitness: 0.9514\n",
+      "Iteration [98] ---- 1.93s ---- Best fitness: 0.9524 ---- Average fitness: 0.9516\n",
+      "Iteration [99] ---- 1.89s ---- Best fitness: 0.9524 ---- Average fitness: 0.9515\n",
       "Best generation : 99\n",
       "Best fitness    : 0.9524\n",
       "Best chromosome : array([1, 1, 0, ..., 1, 1, 1])\n",
-      "Finished in 216.17s (avg 2.16s/gen)\n"
+      "Finished in 347.52s (avg 3.48s/gen)\n"
      ]
     }
    ],
@@ -264,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
