--- a/src/examples/01_knapsack.ipynb
+++ b/src/examples/01_knapsack.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,15 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "os.chdir('..')\n",
+    "os.chdir('..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from algen.trainer import Trainer\n",
     "\n",
     "%load_ext autoreload\n",
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +82,7 @@
       "[Generation 9] - 0:00:00 - Best fitness: 65.0000 - Average fitness: 52.9000\n",
       "Best generation : 9\n",
       "Best fitness    : 65.0000\n",
-      "Best chromosome : array([0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1])\n",
+      "Best chromosome : BinaryChromosome(length=15, genotype=array([0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1])\n",
       "Finished in 0:00:00 (avg 0.00s/gen)\n"
      ]
     }
@@ -109,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
