--- a/src/examples/01_knapsack.ipynb
+++ b/src/examples/01_knapsack.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem Statement"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,27 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Generation 0] - 0:00:00 - Best fitness: 50.0000 - Average fitness: 39.3000\n",
-      "[Generation 1] - 0:00:00 - Best fitness: 50.0000 - Average fitness: 32.9000\n",
-      "[Generation 2] - 0:00:00 - Best fitness: 53.0000 - Average fitness: 30.7000\n",
-      "[Generation 3] - 0:00:00 - Best fitness: 53.0000 - Average fitness: 39.9000\n",
-      "[Generation 4] - 0:00:00 - Best fitness: 53.0000 - Average fitness: 29.7000\n",
-      "[Generation 5] - 0:00:00 - Best fitness: 53.0000 - Average fitness: 23.8000\n",
-      "[Generation 6] - 0:00:00 - Best fitness: 61.0000 - Average fitness: 34.2000\n",
-      "[Generation 7] - 0:00:00 - Best fitness: 63.0000 - Average fitness: 45.1000\n",
-      "[Generation 8] - 0:00:00 - Best fitness: 63.0000 - Average fitness: 40.6000\n",
-      "[Generation 9] - 0:00:00 - Best fitness: 65.0000 - Average fitness: 52.9000\n",
+      "[Generation 0] - Average fitness: 39.30 - Best fitness: 50 - Best fitness so far: 50\n",
+      "[Generation 1] - Average fitness: 32.90 - Best fitness: 50 - Best fitness so far: 50\n",
+      "[Generation 2] - Average fitness: 30.70 - Best fitness: 53 - Best fitness so far: 53\n",
+      "[Generation 3] - Average fitness: 39.90 - Best fitness: 53 - Best fitness so far: 53\n",
+      "[Generation 4] - Average fitness: 29.70 - Best fitness: 53 - Best fitness so far: 53\n",
+      "[Generation 5] - Average fitness: 23.80 - Best fitness: 53 - Best fitness so far: 53\n",
+      "[Generation 6] - Average fitness: 34.20 - Best fitness: 61 - Best fitness so far: 61\n",
+      "[Generation 7] - Average fitness: 45.10 - Best fitness: 63 - Best fitness so far: 63\n",
+      "[Generation 8] - Average fitness: 40.60 - Best fitness: 63 - Best fitness so far: 63\n",
+      "[Generation 9] - Average fitness: 52.90 - Best fitness: 65 - Best fitness so far: 65\n",
       "Best generation : 9\n",
-      "Best fitness    : 65.0000\n",
-      "Best chromosome : BinaryChromosome(length=15, genotype=array([0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1])\n",
-      "Finished in 0:00:00 (avg 0.00s/gen)\n"
+      "Best fitness    : 65\n",
+      "Best chromosome : array([0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1])\n",
+      "Finished in 0:00:00 (avg 0.00s/generation)\n"
      ]
     }
    ],
@@ -112,12 +119,12 @@
     "    seed=seed\n",
     ")\n",
     "\n",
-    "history = trainer.run(num_generations=num_generations)"
+    "history = trainer.run(num_generations=num_generations, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -134,9 +141,9 @@
     }
    ],
    "source": [
-    "best = history['result'].best\n",
-    "average = history['result'].average\n",
-    "generation = history['result'].generation\n",
+    "best = history.best_fitness_each_gen()\n",
+    "average = history.average_fitness_each_gen()\n",
+    "generation = history.generation\n",
     "\n",
     "plt.plot(best, label='best')\n",
     "plt.plot(average, label='average')\n",
@@ -148,6 +155,65 @@
     "plt.title('Fitness value')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Custom Callback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Generation 0] Best fitness: 63\n",
+      "[Generation 3] Best fitness: 63\n",
+      "[Generation 6] Best fitness: 63\n",
+      "[Generation 9] Best fitness: 63\n",
+      "Best generation : 0\n",
+      "Best fitness    : 63\n",
+      "Best chromosome : array([0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1])\n",
+      "Finished in 0:00:00 (avg 0.00s/generation)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from algen.callbacks import Callback\n",
+    "from algen.selection import TournamentSelection\n",
+    "\n",
+    "selection = TournamentSelection(tournament_size=5)\n",
+    "trainer = Trainer(\n",
+    "    chromosome_type='binary',\n",
+    "    chromosome_length=N,\n",
+    "    fitness_function=fitness,\n",
+    "    pop_size=pop_size,\n",
+    "    selection=selection,\n",
+    "    crossover_rate=crossover_rate,\n",
+    "    mutation_rate=mutation_rate,\n",
+    "    seed=seed\n",
+    ")\n",
+    "\n",
+    "class PrintAllFitness(Callback):        \n",
+    "    def on_generation_end(self, gen, logs=None):\n",
+    "        fitness = logs.get('fitness')\n",
+    "        print('Generation:', generation, '-', fitness)\n",
+    "\n",
+    "callbacks = [ReportInPeriod(period=3)]\n",
+    "history = trainer.run(num_generations=10, verbose=1, callbacks=callbacks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
