fix None arguments

--- a/src/examples/01_knapsack.ipynb
+++ b/src/examples/01_knapsack.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cap     : 26\n",
-      "Weights : [8 7 8 9 9 4 1 8 1 8 8 2 8 3 3]\n",
-      "Values  : [ 4 10 11  7  1  6 13 14  3  9  5 15  8  2 12]\n"
+      "Cap     : 16\n",
+      "Weights : [8 7 8 9 9 4 1 8]\n",
+      "Values  : [5 7 3 8 2 6 1 4]\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
     "seed = 47\n",
     "np.random.seed(seed)\n",
     "\n",
-    "N = 15\n",
+    "N = 8\n",
     "weights = np.random.choice(np.arange(9) + 1, N, replace=True)\n",
     "values = np.random.permutation(N) + 1\n",
     "cap = int(0.3 * weights.sum())\n",
